[tool.poetry]
name = "nimsmo"
version = "0.1.2"
description = ""
authors = ["Nico Strasdat <Nico.Strasdat@tu-dresden.de>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
nython = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
